# credit_risk

./: CMakeLists.txt  README.md  main.cpp
include/: LBFGSB.h
include/CreditRisk/: credit_portfolio.h  credit_portfolio.h.autosave  element.h  equation.h  factorCorrelation.h  fund.h  integrator.h  optim.hpp  portfolio.h  portfolio_optim.h  spread.h  transition.h  utils.h
include/LBFGSpp/: LineSearchMoreThuente.h  Param.h
include/ThreadPool/: safeQueue.hpp  threadPool.hpp
src/Credit_portfolio/: credit_portfolio.cpp
src/Elements/: element.cpp
src/Equation/: equation.cpp
src/FactorCor/: FactorCorrelation.cpp
src/Fund/: fund.cpp
src/Integrator/: integrator.cpp
src/Migration/: spread.cpp  transition.cpp
src/Portfolio/: portfolio.cpp
src/Portfolio_optim/: portfolio_optim.cpp
src/Utils/: utils.cpp
test/: CMakeLists.txt  element_tests.cpp  reading_tests.cpp
test/data/from_ECT/: CORREL.txt  DATA_CRED_RETAIL.txt  DATA_CRED_WHOL.txt  PTRANS.txt  SPREADS.txt  SPV_TRANCHES.csv
test/data/from_csv/: Fund.csv  Portfolio.csv  cor.csv  spreads.csv  transition.csv
test/data/from_xlsx/: SCIB_CM_12_2020_v1.xlsx
